--- a/config/sync/language/ar/webform.webform.contact.yml
+++ b/config/sync/language/ar/webform.webform.contact.yml
@@ -1,4 +1,4 @@
 title: اتصل
+description: '<p>Basic email contact webform.</p>'
 settings:
   confirmation_message: '<p>أُرسلت رسالتك.</p>'
-elements: ''
